# cookiecutter-python

./: cookiecutter.json  setup.py  tasks.py
{{cookiecutter.package_name}}/: ChangeLog.txt  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: cli.py  {{ cookiecutter.package_name }}.py
