[bdist_wheel]
universal=1

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.package_name }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
exclude = docs

[metadata]
description-file=README.rst
